external-crates/move/crates/move-compiler/tests/move_check/parser/use_with_module.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/use_with_module.move:2:1
  │
2 │ use 0x1::Module;
  │ ^^^ Invalid code unit. Expected 'address' or 'module'. Got 'use'
